tests/regression/baselines/test_revapp_poly_bad_suggestion.expected
ERROR
SyntaxError: Unexpected token {
Note: expected tokens: ["*", ",", ".", ";", "[", "in", "|>", r#"[<>]=?\\.?|[!=]="#, r#"[\\*/%]\\.?"#, r#"[\\+\\-]\\.?|\\^"#]
Parse error occurred here:
let f = fun (type t) (x: t): t -> x;
let g = fun {}: (type t. t -> t) -> f;
let _: str = 42 |> g {};
                     ^   
